@@ -1,4 +1,4 @@
-from typing import TypeVar
+from typing import NewType, TypeVar
 
 #: T1
 T1 = TypeVar("T1")
@@ -13,3 +13,6 @@ T4 = TypeVar("T4", covariant=True)
 
 #: T5
 T5 = TypeVar("T5", contravariant=True)
+
+#: T6
+T6 = NewType("T6", int)
